# arcgislayerupdaterr

./: .replit  README.md  app.py  app_log.txt  clean_app.py  complete_app_export.py  data_handler_demo.py  dependencies.txt  download_package.md  github_package.md  irth_layers_template.csv  pyproject.toml  repository_structure.md  simple_app.py  simplified_app.py  update_log.txt  user_settings.json
attached_assets/: Pasted--Accessing-main-page-https-www-irth-com-Main-page-status-200-Found-login-page-https--1750535475494_1750535475494.txt  Pasted--Create-a-Streamlit-app-named-ArcGISLayerUpdater-that-allows-users-to-manage-their-ArcGIS-Online-c-1750476170619_1750476170620.txt  Pasted--Enhance-the-existing-ArcGISLayerUpdater-Streamlit-app-to-include-the-following-new-features-while-1750520676925_1750520676925.txt  Pasted--Prompt-for-Replit-AI-to-Fix-Shapefile-Upload-Error-in-ArcGISLayerUpdater-I-need-you-to-fix-the--1750649394712_1750649394713.txt  Pasted--Update-the-ArcGISLayerUpdater-Streamlit-app-to-fix-the-recurring-error-Error-creating-layer-d-1750653043168_1750653043169.txt  Pasted-Develop-a-Streamlit-application-named-ArcGISLayerUpdater-that-enables-users-to-manage-ArcGIS-Onlin-1750652869313_1750652869313.txt  Pasted-Enhance-the-existing-ArcGISLayerUpdater-Streamlit-app-to-improve-the-user-interface-and-add-a-data-1750646636466_1750646636466.txt  Pasted-Enhance-the-existing-ArcGISLayerUpdater-Streamlit-app-to-include-layer-styling-popup-control-adv-1750648378890_1750648378891.txt  (+17 more)
utils/: arcgis_manager.py  backup_manager.py  export_manager.py  file_handler.py  (+4 more)
