[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.0",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.0",
    "arcgis>=2.4.1.1",
    "pyproj>=3.7.1",
    "cryptography>=45.0.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
]
